[AT-102] Fix template height on mobile, move menuMobile to menu folder, fix url for bottom menu mobile

--- a/client/src/scss/pages/templatePage.scss
+++ b/client/src/scss/pages/templatePage.scss
@@ -1,5 +1,6 @@
 .template-page {
   grid-area: article;
+  height: 100%;
 
   @extend .container-3-columns;
 
